implementation of different levels of danger

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1067,26 +1067,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "b84b4f23-6f14-4d01-9851-3e53a6bc4d9e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"1096.0 933.0 2.0 2.0\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,1868.0)\"><circle cx=\"1097.0\" cy=\"934.0\" r=\"0.06\" stroke=\"#555555\" stroke-width=\"0.02\" fill=\"#66cc99\" opacity=\"0.6\" /></g></svg>"
-      ],
       "text/plain": [
-       "<POINT (1097 934)>"
+       "[0, 1]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Point(1097,934)"
+    "a = [0,0,0,1,1,1,0]\n",
+    "list(set(a))"
    ]
   },
   {
