gpio with custom model

--- a/run_detection.ipynb
+++ b/run_detection.ipynb
@@ -7,16 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import all required modules\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
     "#import all required modules\n",
-    "from modules.xstream import Stream\n",
-    "from modules.xenum import StreamType, ModelType, PolygonType\n",
-    "from modules.xutils import Config, add_polygon\n",
-    "from modules.xpolygon import XPolygon\n",
     "from detection.core import DLModel\n",
-    "import cv2"
+    "from modules.xstream import Stream\n",
+    "from modules.xpolygon import XPolygon\n",
+    "from modules.xutils import Config, add_polygon\n",
+    "from modules.xenum import StreamType, ModelType, PolygonType"
    ]
   },
   {
@@ -79,6 +78,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed70b52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# polygons_list=[[(928, 218), (737, 190), (435, 155), (195, 143), (30, 315), (373, 350), (740, 396), (903, 427), (929, 219)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "018a9195-8bdc-41cb-9231-24eff86319c6",
    "metadata": {},
@@ -118,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
