clean light tower thread

--- a/run_detection.ipynb
+++ b/run_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "f1b5ad3d-00a5-43b8-9afd-7ec5401a067a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87d1d521-fc14-45d3-a685-e0f723151955",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3cca69ac-7e61-4d6d-be46-625c56842dc2",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "09ae0214-2e5e-4c56-94b2-8f7593d73b63",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "018a9195-8bdc-41cb-9231-24eff86319c6",
    "metadata": {},
    "outputs": [
@@ -109,6 +109,91 @@
     "dlmodel.set_risk_area(polygons_list)\n",
     "dlmodel.detect(extract=True, save_file=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6795bb2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e8203ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import all required modules\n",
+    "import time\n",
+    "import RPi.GPIO as GPIO\n",
+    "from threading import Thread\n",
+    "\n",
+    "#base class for managing GPIO process\n",
+    "class XGPIO(object):\n",
+    "    def __init__(self, pins, sra=True): #sra=start signal thread right away\n",
+    "        self.gpio = GPIO\n",
+    "        self.pins = pins\n",
+    "        self.running = True\n",
+    "        self.send_signal_thread = None\n",
+    "        self.current_state = GPIO.HIGH\n",
+    "        self.setup()\n",
+    "    \n",
+    "    def setup(self):\n",
+    "        self.gpio.setmode(GPIO.BCM)\n",
+    "        self.gpio.setup(self.pins, GPIO.OUT, initial=GPIO.HIGH)\n",
+    "\n",
+    "    def release(self):\n",
+    "        self.running = True\n",
+    "        self.gpio.cleanup()\n",
+    "    \n",
+    "    def send(self, pins):\n",
+    "        assert len(pins) != 0, 'incorrect pins number list.'\n",
+    "        #repeatedly send signal to the tower\n",
+    "        for i in range(30):\n",
+    "            if self.running:\n",
+    "                self.gpio.output(pins, GPIO.LOW)\n",
+    "                time.sleep(0.1)\n",
+    "            else:\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "68589976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgpio = XGPIO([5, 12, 18])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6b50cd5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgpio.send([18])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9231ec48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5da57df5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
