fix gpio thread conflict

--- a/run_detection.ipynb
+++ b/run_detection.ipynb
@@ -178,6 +178,119 @@
    "source": [
     "xgpio.send([5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3221835d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modules import xconst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2495b722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [xconst.danger_pin_num[i] for i in xconst.danger_pin_num if i in res.danger_level]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8e1a2f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['green_yellow_red']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['_'.join([xconst.pin_num_color[i] for i in xconst.pin_num_color if i in res.danger_level])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "80ba4414",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'green_red'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "danger = [1,3]\n",
+    "\n",
+    "'_'.join([xconst.pin_num_color[j] for j in [xconst.danger_pin_num[i] for i in xconst.danger_pin_num if i in danger]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5b297440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = ['red', 'green', 'yellow']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f8abbda1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ac81511a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['green', 'red', 'yellow']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8bc360",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
