--- a/run_detection.ipynb
+++ b/run_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "f1b5ad3d-00a5-43b8-9afd-7ec5401a067a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "87d1d521-fc14-45d3-a685-e0f723151955",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3cca69ac-7e61-4d6d-be46-625c56842dc2",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "09ae0214-2e5e-4c56-94b2-8f7593d73b63",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,8 @@
      "output_type": "stream",
      "text": [
       "[msg]: extract first frame for drawing polygon shape.\n",
-      "[msg]: drawing risk area as polygon shape.\n"
+      "[msg]: drawing risk area as polygon shape.\n",
+      "[msg]: polygon created. | points = 6\n"
      ]
     }
    ],
@@ -78,17 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1ed70b52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(928, 218), (737, 190), (435, 155), (195, 143), (30, 315), (373, 350), (740, 396), (903, 427), (929, 219)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# polygons_list=[[(928, 218), (737, 190), (435, 155), (195, 143), (30, 315), (373, 350), (740, 396), (903, 427), (929, 219)]]"
+    "polygons_list=[[(928, 218), (737, 190), (435, 155), (195, 143), (30, 315), (373, 350), (740, 396), (903, 427), (929, 219)]]\n",
+    "print(*polygons_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "018a9195-8bdc-41cb-9231-24eff86319c6",
    "metadata": {},
    "outputs": [
@@ -96,18 +106,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[msg]: polygon: POLYGON ((182 141, 386 148, 766 192, 938 215, 888 424, 435 386, 142 337, 24 309, 180 140, 182 141))\n",
+      "[msg]: polygon: POLYGON ((928 218, 737 190, 435 155, 195 143, 30 315, 373 350, 740 396, 903 427, 929 219, 928 218))\n",
       "[msg]: loading yolo model from .pt file.\n",
-      "[msg]: yolo model loaded successfully.\n"
+      "[msg]: yolo model loaded successfully.\n",
+      "[msg]: GPIO connection was established.\n",
+      "[msg]: GPIO sending signal thread was started.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting frames:   2%|▏         | 8/499 [00:00<00:06, 79.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[msg]: loading cv2 capture object.\n",
+      "[msg]: capture object loading completed.\n",
+      "[msg]: start extracting frames | total frames: 499\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting frames: 100%|██████████| 499/499 [00:03<00:00, 126.82it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[msg]: GPIO connection was released.\n",
+      "[msg]: wait - start saving prediction into file: \"b36bf_20240610105038.mp4\"\n",
+      "[msg]: start writing frames into mp4 file.\n",
+      "[msg]: file successfully saved as: \"b36bf_20240610105038.mp4\" | Saving time: 4.282931089401245 seconds\n"
      ]
     }
    ],
    "source": [
-    "dlmodel = DLModel(model_type=ModelType.yolov8l, \n",
+    "dlmodel = DLModel(model_type=ModelType.custom_best, \n",
     "                  stream=stream, \n",
     "                  config=config)\n",
     "dlmodel.set_risk_area(polygons_list)\n",
-    "dlmodel.detect(extract=True, save_file=False)"
+    "dlmodel.detect(extract=True, save_file=True)"
    ]
   }
  ],
@@ -127,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
